--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -23,6 +23,10 @@
               <td><%= address.postal_code %></td>
               <td><%= address.ship_address %></td>
               <td><%= address.ship_name %></td>
+              <td class="text-center">
+						      <%= link_to "編集", edit_address_path(address), class: "btn btn-success" %>
+						      <%= link_to "削除", address_path(address), method: :delete, "data-confirm" => "削除します。本当によろしいですか？", class: "btn btn-danger" %>
+					    </td>
             </tr>
           <% end %>
         </tbody>
