--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,5 +1,14 @@
 <div class="row mt-5">
   <div class="col-md-8">
+
+    <h3 class="mb-5">ジャンル検索</h3>
+    <div class="search-form">
+      <%= form_with url: search_admin_genres_path, method: :get, local: true do |f| %>
+        <%= f.text_field :keyword %>
+        <%= f.submit "検索" %>
+      <% end %>
+    </div>
+
     <h3 class="mb-5">ジャンル一覧・追加</h3>
     <div class="input mb-5">
       <%= form_with model: @genre, url: admin_genres_path, local:true do |f| %>
