--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -40,7 +40,7 @@
     </div>
     <div class="search-form">
       <%= form_with url: search_admin_items_path, method: :get, local: true do |f| %>
-        <%= f.text_field :keyword, value: @keyword %>
+        <%= f.text_field :keyword %>
         <%= f.submit "検索" %>
       <% end %>
     </div>
