--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -45,6 +45,7 @@
     <div class="row">
       <h5 class="mr-4">支払方法</h5>
       <p><%= @order.payment_method %></p>
+      #0だとクレジット、1だと銀行って出てくる
     </div>
     <div class="row">
       <h5 class="mr-4">配送先</h5>
