--- a/app/views/layouts/_header.html 2.erb
+++ b/app/views/layouts/_header.html 2.erb
@@ -26,7 +26,7 @@
             <% if request.path.include?('/admin') %>
               <li><%= link_to 'About', homes_about_path,class: 'nav-link text-light' %></li>
               <li><%= link_to '商品一覧', items_path,class: 'nav-link text-light' %></li>
-              <li><%= link_to '新規登録', class: 'nav-link text-light' %></li>
+              <li><%= link_to '新規登録', new_end_user_registration_path,class: 'nav-link text-light' %></li>
               <li><%= link_to 'ログイン', new_admin_session_path ,class: 'nav-link text-light'%></li>
             <% else %>
               <li><%= link_to 'About', homes_about_path,class: 'nav-link text-light' %></li>
@@ -40,7 +40,7 @@
     </div>
     <div class="search-form">
       <%= form_with url: search_admin_items_path, method: :get, local: true do |f| %>
-        <%= f.text_field :keyword %>
+        <%= f.text_field :keyword, value: @keyword %>
         <%= f.submit "検索" %>
       <% end %>
     </div>
