--- a/app/views/public/cart_items/index.html 2.erb
+++ b/app/views/public/cart_items/index.html 2.erb
@@ -25,10 +25,8 @@
             <tr>
               <td><%= attachment_image_tag cart_item.item, :image, format: 'jpg', fallback: "cake.jpg", size: "100x60" %><%= cart_item.item.name %></td>
               <td><%= (cart_item.item.price * 1.1).floor %></td>
-              
               <%= form_with model: cart_item, local: true do |f| %>
-                <%= f.hidden_field :item_id, :value => cart_item.item.id %>
-                 #商品idにカート内商品の情報を入れる
+                <% f.hidden_field :item_id, :value => cart_item.item.id %>
                 <td>
                   <span class="form-group col-md-1">
                     <%= f.select :amount, [[1,1], [2,2], [3,3], [4,4], [5,5], [6,6], [7,7], [8,8], [9,9], [10,10]], include_blank: "#{cart_item.amount}" %>
@@ -60,7 +58,6 @@
         </tbody>
       </table>
     </div>
-    
     <div class="row mt-3">
       <%= link_to "情報入力に進む", new_order_path, class: "btn btn-success col-md-3 mx-auto" %>
     </div>
